--- a/LB1.html
+++ b/LB1.html
@@ -1,1 +1,11 @@
-<h1>Testing my LB </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LB1</title>
+</head>
+<body>
+    
+</body>
+</html>
