updated HTML file

--- a/LB1.html
+++ b/LB1.html
@@ -4,8 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LB1</title>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+        </style>
 </head>
 <body>
-    Основна тригонометрична тотожність:
+Для будь-якого натурального числа <b>n>2</b> <br>
+рівняння <i>а<sup>n</sup>+b<sup>n</sup>=с<sup>n</sup></i> <b>не має рішень </b>при <br>
+цілих ненульових числах а, b, c. <br>
+
+<ul><b>Факультети</b>
+<li>Факультет комп’ютерних наук 
+    <ul>
+    <li>Кафедра інформаційних управляючих систем (ІУС)</li>
+    <li>Кафедра програмної інженерії (ПІ)</li>
+    <li>Кафедра штучного інтелекту (ШІ)</li>
+    <li>Кафедра системотехніки (СТ)</li>
+    <li>Кафедра медіасистем та технологій (МСТ)</li>
+    </ul></li>
+<li>Факультет комп’ютерної інженерії та управління
+    <ul>
+    <li>Кафедра Комп’ютерних інтелектуальних технологій та систем (КІТС)</li>
+    <li>Кафедра електронних обчислювальних машин (ЕОМ)</li>
+    <li>Кафедра автоматизації проектування обчислювальної техніки (АПОТ)</li>
+    <li>Кафедра безпеки інформаційних технологій (БІТ)</li>
+    <li>Кафедра філософії</li>
+    <li>Кафедра українознавства (Укр)</li>
+    </ul></li>
+<li>Факультет автоматики і комп’ютеризованих технологій
+    <ul>
+        <li>Кафедра комп’ютерно-інтегрованих технологій, автоматизації та робототехніки (КІТАР)</li>
+        <li>Кафедра проектування та експлуатації електронних апаратів (ПЕЕА)</li>
+        <li>Кафедра фізики</li>
+        <li>Кафедра безпекової інженерії (БІ)</li>
+    </ul></li>
+<li>Факультет інформаційно-аналітичних технологій та менеджменту
+    <ul>
+        <li>Кафедра інформатики (ІНФ)</li>
+        <li>Кафедра прикладної математики (ПМ)</li>
+        <li>Кафедра вищої математики (ВМ)</li>
+        <li>Кафедра економічної кібернетики та управління економічною безпекою (ЕК)</li>
+    </ul></li>
+<li>Факультет інфокомунікацій
+    <ul>
+    <li>Кафедра інфокомунікаційної інженерії ім. В.В. Поповського (ІКІ)</li>
+    <li>Кафедра інформаційно-мережної інженерії (ІМІ)</li>
+    <li>Кафедра інформаційно-вимірювальних технологій (ІВТ)</li></ul>
+</li>
+<li>Факультет електронної та біомедичної інженерії
+    <ul>
+    <li>Кафедра Біомедичної інженерії (БМІ)Кафедра фізичного виховання та спорту (ФВС)</li>
+    <li>Кафедра мікроелектроніки, електронних приладів та пристроїв (МЕЕПП)</li>
+    <li>Кафедра фізичних основ електронної техніки (ФОЕТ)</li>
+    </ul>
+</li>
+<li>Факультет інформаційних радіотехнологій та технічного захисту інформації
+    <ul>
+    <li>Кафедра медіаінженерії та інформаційних радіоелектронних систем (МІРЕС)</li>
+    <li>Кафедра радіотехнологій інформаційно-комунікаційних систем (РТІКС)</li>
+    <li>Кафедра комп’ютерної радіоінженерії та систем технічного захисту інформації (КРіСТЗІ)</li>
+    <li>Кафедра мікропроцесорних технологій і систем (МТС)</li>
+    <li>Кафедра іноземних мов</li>
+    </ul></li></ul>
+
+    <table> 
+        <caption>Курс&nbsp;валют</caption>
+
+    </table>
 </body>
 </html>
